--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 /jasmine-unit-testing-example-master
 /mocha-unit-testing-example-master
-node_modules
-.nyc_output
-coverage
+/node_modules
+/nyc_output
+/coverage
